# quoridor-llm

./: .gitignore  README.md  hello.py  pyproject.toml  run.py
quoridor_llm/: __init__.py  agent.py  aiutils.py  constants.py  quoridor.py  quoridor_test.py  test_quoridor.py
quoridor_llm/prompts/: action_phase.txt  planning_phase.txt  system.txt
