[project]
name = "quoridor-llm"
version = "0.1.0"
description = "LLMs competing with each other in matches of Quoridor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
